# AESTHETIC-CREATURES

./: .gitignore  README.md  info.txt  pyproject.toml  requirements.txt
assets/: octo.glb
scripts/: rollout_dataset.py  rollout_record.py  run_gui.py  run_octo_glb.py  run_octo_multibody.py
src/aesthetic_creatures/: __init__.py  art.py  config.py  controllers.py  creatures.py  envs.py  glb_topology.py  model.py  octo_from_glb.py  recorder.py  recording.py  replay.py  train.py  train_menagerie.py  utils.py
src/aesthetic_creatures.egg-info/: SOURCES.txt  requires.txt
src/aesthetic_creatures/envs/: __init__.py  gymnasium_envs.py  menagerie.py
src/aesthetic_creatures/models/: __init__.py
src/aesthetic_creatures/recording/: __init__.py  recorder.py  saver.py
src/aesthetic_creatures/rendering/: __init__.py  art.py  video.py
src/aesthetic_creatures/scripts/: __init__.py  replay.py  train.py  train_menagerie.py
viewer/: index.html  main.js
