[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aesthetic-creatures"
version = "0.1.0"
description = "PyBullet + Gymnasium creature simulation and recording framework"
readme = "README_RUN.md"
requires-python = ">=3.10"
dependencies = [
  "gymnasium>=0.29",
  "pybullet>=3.2.5",
  "numpy>=1.24"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
